@@ -3,7 +3,7 @@ use warnings;
 
 use Test::More;
 use Test::Deep;
-my $PROMPT = re('\d+');
+my $PROMPT = re('^\d+$');
 
 
 use Debug::Client;
@@ -18,7 +18,7 @@ Enter h or `h h' for help, or `man perldebug' for more help.
 
 main::(t/eg/01-add.pl:4):	$| = 1;
   DB<1> ),
-  exp => ['main::', 't/eg/01-add.pl', 4, '$| = 1;'],
+  exp => [$PROMPT, 'main::', 't/eg/01-add.pl', 4, '$| = 1;'],
 };
 
 # I saw this kind of output when using Padre, I am not sure
@@ -32,15 +32,22 @@ Enter h or `h h' for help, or `man perldebug' for more help.
 main::(/home/gabor/work/padre/Debug-Client/t/eg/01-add.pl:4):
 4:	$| = 1;
   DB<1> ),
-  exp =>  ['main::', '/home/gabor/work/padre/Debug-Client/t/eg/01-add.pl', 4, '$| = 1;'],
+  exp =>  [$PROMPT, 'main::', '/home/gabor/work/padre/Debug-Client/t/eg/01-add.pl', 4, '$| = 1;'],
 };
 
-plan tests => 2*@tests;
+push @tests, {
+  out => q(Debugged program terminated.  Use q to quit or R to restart,
+  use o inhibit_exit to avoid stopping after program termination,
+  h q, h R or h o to get additional info.  
+  DB<1> ),
+  exp => [$PROMPT, '<TERMINATED>'],
+};
+
+plan tests => scalar @tests;
 
 foreach my $t (@tests) {
         my $out = $t->{out};
         my $prompt = Debug::Client::_prompt(\$out);
-        like($prompt, qr/^\d+$/);
         my @res = Debug::Client::_process_line(\$out);
-        cmp_deeply(\@res, $t->{exp});
+        cmp_deeply([$prompt, @res], $t->{exp});
 }
